# Quantum-Drift-Forecasting

./: .gitignore  README.md  index.html  requirements.txt
data/: quantum_device_metrics.csv
notebooks/: quantum_drift_combined.ipynb  rnn_drift_forecast.ipynb  transformer_calibration.ipynb
outputs/: anomaly_scores.csv  calibration_forecast.csv  drift_predictions.csv
scripts/: add_html_alt_text.py  make_paper_figures.py  remove_experiment_numbers.py  rewrite_notebooks.py
src/: __init__.py  evaluate.py  models.py  real_benchmark.py  server.py  train.py
submission/: main.tex  main.tex.bak_idfix  main.tex.bak_preenrich  main.tex.bak_prephase2  main.tex.bak_prerefine  main.tex.bak_serieschain
submission/code/: CITATION.cff  README.md  THEORY.txt  make_paper_figures.py  pyproject.toml
submission/code/figures/: generate_figures.py
submission/code/generated_data/: coherence_dynamics_summary.json  detection_benchmark.json  forecasting_benchmark.json  reconstruction_rank_sweep.json  roc_overcomplete.json  sequence_notebook_metrics.json
submission/code/qdriftforecast/: __init__.py  data.py  detection.py  forecasting.py  foundations.py  kernels.py  reproduce.py  theory.py
submission/tables/: cross_domain_benchmark.tex  detection_benchmark.tex  forecasting_benchmark.tex  thermal_benchmark.tex  truncation_sweep.tex
website/: README_SITE.md  demo.js  index.html  style.css
website/notebooks_html/: quantum_drift_combined.html  rnn_drift_forecast.html  transformer_calibration.html
