[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qdriftforecast"
version = "1.0.0"
description = "Deterministic quantum hardware drift forecasting figures and tables."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Molena Huynh" }]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
ml = ["torch>=2.1"]
dev = ["pytest>=7.0"]

[project.scripts]
qdrift-reproduce = "qdriftforecast.reproduce:main"

[tool.setuptools]
py-modules = ["make_paper_figures"]

[tool.setuptools.packages.find]
include = ["qdriftforecast*"]
