[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "specops-cst"
version = "2.0.0"
description = "Causal spectral-truncation C*-algebraic kernels for quantum-hardware drift forecasting and noncommutative drift detection: deterministic regeneration of the manuscript figures and tables. Part of the spectral-truncation operators (SpecOps) program."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Molena Huynh", email = "molena.huynh@jmp.com" }]
keywords = [
  "quantum-hardware",
  "drift-forecasting",
  "anomaly-detection",
  "spectral-truncation-kernel",
  "C-star-algebra",
  "noncommutative-kernel",
  "time-series",
  "reproducibility",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24,<3.0",
  "pandas>=2.0,<3.0",
  "scipy>=1.11,<2.0",
  "scikit-learn>=1.3,<2.0",
  "matplotlib>=3.7,<4.0",
]

[project.optional-dependencies]
ml = ["torch>=2.1,<3.0"]
dev = ["pytest>=7.0,<9.0", "build>=1.0,<2.0", "twine>=5.0,<7.0"]

[project.urls]
Homepage = "https://github.com/molena-huynh/Quantum-Drift-Forecasting"
Repository = "https://github.com/molena-huynh/Quantum-Drift-Forecasting"

[project.scripts]
cst-reproduce = "qdriftforecast.reproduce:main"
qdrift-reproduce = "qdriftforecast.reproduce:main"

[tool.setuptools]
py-modules = ["make_paper_figures"]
license-files = ["LICENSE"]

[tool.setuptools.packages.find]
include = ["qdriftforecast*"]
